# japanese-input

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: build_bins.yml
analyze/: Cargo.toml
analyze/benches/: hiragana_bench.rs  kanji_bench.rs  match_bench.rs  utils.rs
analyze/src/: analyze.rs  analyzed_kanji_node.rs  bbox.rs  dtw.rs  hungarian_matcher.rs  leaf_matrix.rs  lib.rs  match_node.rs  normalize.rs  point.rs  recognize_hiragana.rs  recognize_kanji.rs
analyze/tests/: go.rs  hiragana.rs  recognize_kanji.rs  utils.rs  あめ.rs  いち.rs  えん.rs  おう.rs  おと.rs  かわ.rs  さん.rs  じゅう.rs  せい.rs  つち.rs  に.rs  みぎ.rs
data/: License.txt
japanese-input-native/: Cargo.toml
japanese-input-native/src/: lib.rs
japanese_input/: __init__.py
japanese_input/widgets/: grid_draw_viewer.py  grid_review_viewer.py  grid_viewer.py  input_widget.py  review_widget.py
kanji-vg/: Cargo.toml
kanji-vg/src/: lib.rs
